--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <span class="endMessage">
                     <!-- This is available to buy at my <a href="https://gannon.tv/products/merry-christmas-tree"
                 text-decoration="underline" target="new">shop</a> -->
-                    merry christams to the moon
+                    MERRY CHRISTMAS TO THE MOON
                 </span>
             </foreignObject>
         </svg>
